# agent-taskflow

./: .gitignore  AGENTS.md  README.md  README.zh-TW.md  WORKFLOW.md  pyproject.toml  requirements.txt
agent_taskflow/: __init__.py  _helpers.py  approved_task_runner.py  artifacts.py  atomic_temp_orphan_audit.py  atomic_write.py  attempt_models.py  attempt_resources.py  attempt_resources_schema.py  attempt_schema.py  attempt_scoped_runtime_compat.py  attempt_scoped_runtime_path.py  attempt_store.py  branch_push.py  branch_push_confirm.py  canonical_runtime_path.py  canonical_runtime_schema.py  codex_advisory_artifact_contract_validator.py  codex_advisory_evidence_gate.py  codex_advisory_review.py  codex_advisory_review_summary.py  config.py  context_validation.py  dispatcher.py  draft_pr.py  draft_pr_confirm.py  draft_pr_confirm_helpers.py  draft_pr_record.py  execution_engine_approved_task_adapter.py  execution_engine_contract.py  execution_engine_manual_runtime.py  execution_observability.py  executor_launch.py  executor_process_reason_compat.py  executor_process_runtime_path.py  executor_process_schema.py  github_issue_discovery.py  github_issue_ingestion.py  github_issue_ingestion_failures.py  github_issue_intake.py  (+71 more)
config/: projects.yaml
docs/: .v020-release-metadata-ready  active-cron-observability-post-rollout-validation.md  active-cron-observability-rollout.md  atomic-artifact-safety-runbook.md  attempt-scoped-runtime-resources.md  canonical-runtime-admission.md  changed-files-no-exclusion-decision.md  changed-files-policy-validator.md  claude-code-bounded-implementer-executor.md  claude-code-operator-invocation-runbook.md  codex-advisory-review.md  current-architecture-boundary.md  evidence-only-task-archive.md  execution-engine-approved-task-adapter.md  execution-engine-architecture-inventory.md  execution-engine-contract.md  execution-engine-manual-runtime-path.md  execution-observability-summary.md  executor-process-lifecycle.md  explicit-scheduler-confirmation-preparation-checkpoint.md  intake-runner-handoff-contract.md  (+88 more)
(+443 files in other folders)
