[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-taskflow"
version = "0.2.5"
description = "Python-native, GitHub-oriented orchestration system for human-gated AI engineering workflows."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Anderson Liu" },
]
dependencies = [
  "PyYAML>=6.0,<7",
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "httpx>=0.27,<1.0",
]

[project.urls]
Repository = "https://github.com/anderson930420/agent-taskflow"

[project.scripts]
agent-taskflow-local-validation = "agent_taskflow.cli.local_validation:main"
agent-taskflow-github-issue-one-task-automation = "agent_taskflow.cli.github_issue_one_task_automation:main"
agent-taskflow-github-issue-one-task-scheduler-tick = "agent_taskflow.cli.github_issue_one_task_scheduler_tick:main"
agent-taskflow-codex-advisory-review = "agent_taskflow.cli.run_codex_advisory_review:main"

[tool.setuptools.packages.find]
include = ["agent_taskflow*"]
